# akir-tauri

./: .env.devlopment  .env.pro  .gitignore  .prettierrc.js  COMMIT_CONVENTION.md  README.md  components.json  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.build.js  vite.config.ts
common/components/: index.ts
common/plugins/: index.ts
common/shadcn/ui/: alert.tsx  (+14 more)
common/store/: useThemeStore.ts
common/styles/: global.scss  index.scss  shadcn.scss  themes.scss  uno.scss
core/: auto-import.ts  vite.d.ts
core/mock/: auth.ts  menu.ts  user.ts
core/plugins/: arco.ts  auto-import.ts  index.ts  mock.ts  tanstack.ts
core/resolver/: index.ts  preset.ts  resolver.ts  types.ts  utils.ts
mock/: auth.ts  menu.ts  user.ts
modules/main/: App.tsx  index.html  main.tsx  tsr.config.json
modules/tauri/: App.tsx  routeTree.gen.ts
src/: App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  lib.rs  main.rs  menu.rs
src-tauri/src/command/: app.rs  devtools.rs  mod.rs
src-tauri/src/menu/: menus.rs  mod.rs  tray.rs
src/components/: index.ts
src/config/: config.ts  menus.ts
src/configs/: menus.ts  settings.ts
src/constants/: RouteTo.ts
src/database/: setting.ts
src/enum/: RequestURL.ts  RouteName.ts  RoutePath.ts
src/hooks/: useAppRouter.tsx  useAsyncEffect.ts  useAuth.ts  useDialog.tsx  useTheme.tsx  useUtils.ts
src/layouts/: SuspenseFallback.tsx  index.tsx
src/mock/: auth.ts  menu.ts  user.ts
src/pages/: __root.tsx  index.lazy.tsx  settings.tsx
src/plugins/: index.ts  router.ts  tailwind.ts  unocss.ts
src/request/: auth.ts  user.ts
src/rify/: index.ts
src/routes/: admin.ts  auth.ts  error.ts  front.ts  index.ts  result.ts
src/store/: useAppKeyStore.ts  useMenuStore.ts  useThemeStore.ts  useUserStore.ts
src/styles/: fonts.scss  global.css  global.scss  index.scss  shadcn.css  tailwind.css  tailwind.scss  themes.scss
tauri/: App.tsx  index.html  main.tsx  routeTree.gen.ts
tauri/components/: container.tsx  index.ts
tauri/enum/: TauriRouteName.ts
tauri/layouts/: container.tsx  index.tsx  leftbar.tsx  popup-container.tsx
tauri/pages/: index.lazy.tsx
tauri/plugins/: index.ts
tauri/routes/: home.ts  index.ts  settings.ts
tauri/store/: useAppKeyStore.ts
tauri/styles/: global.scss  index.scss
types/: model.d.ts  react.d.ts  route.d.ts  shims.d.ts  vite.d.ts
types/model/: auth.d.ts  model.d.ts
types/rify/: route.d.ts  theme.d.ts
(+446 files in other folders)
