[package]
name = "app"
version = "0.1.0"
description = "Rapidify-react Tauri App"
authors = [ "pomeluce" ]
license = "GPL-3.0"
repository = "https://github.com/pomeluce/rapidify-react"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [  ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0-beta.22", features = [  ] }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
