[package]
name = "rapidify"
version = "2024.4.2"
description = "rapidify-tauri"
authors = [ "pomeluce" ]
license = "GPL-3.0"
repository = "https://github.com/pomeluce/rapidify-react"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [  ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0", features = [ 'tray-icon', 'image-ico', 'image-png', 'devtools' ] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = [ "sqlite" ] }
tauri-plugin-theme = "2.1.1"
